--- a/src/BeautifulRestApi/project.json
+++ b/src/BeautifulRestApi/project.json
@@ -22,7 +22,8 @@
     "Microsoft.EntityFrameworkCore.InMemory": "1.0.0",
     "BeautifulRestApi.Dal": {
       "target": "project"
-    }
+    },
+    "Mapster": "2.4.3"
   },
   
   "frameworks": {
